--- a/comcorhd.tronco.me/interrogar-ud/style.css
+++ b/comcorhd.tronco.me/interrogar-ud/style.css
@@ -84,24 +84,51 @@ border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
-.tooltip .tooltiptext {
+.tooltiptextfix {
 visibility: hidden;
-width: 600px;
+max-width: 40%;
 background-color: black;
 color: #fff;
+margin: auto auto;
 text-align: left;
 padding: 20px 20px 20px 20px;
 border-radius: 6px;
+top: 0%;
+//top: 0px;
+//left: auto;
+right: 10%;
+
+/* Position the tooltip text - see examples below! */
+position: fixed;
+z-index: 1;
+}
+
+.tooltip .tooltiptext {
+visibility: hidden;
+width: 400px;
+background-color: black;
+color: #fff;
+//margin: auto auto;
+text-align: left;
+padding: 20px 20px 20px 20px;
+border-radius: 6px;
+//top: 0%;
 top: -5px;
 left: 105%;
+//right: 10%;
 
 /* Position the tooltip text - see examples below! */
 position: absolute;
 z-index: 1;
 }
 
+
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
+visibility: visible;
+}
+
+.tooltip:hover .tooltiptextfix {
 visibility: visible;
 }
 
