sistema de inquéritos

--- a/comcorhd.tronco.me/interrogar-ud/style.css
+++ b/comcorhd.tronco.me/interrogar-ud/style.css
@@ -35,6 +35,8 @@ input[type=text] {
 }
 a {
         color: #638C28;
+        //color: green;
+        //color: red;
         text-decoration: none;
 }
 
