--- a/comcorhd.tronco.me/interrogar-ud/style.css
+++ b/comcorhd.tronco.me/interrogar-ud/style.css
@@ -1,3 +1,30 @@
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: orange; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+.easyPaginateNav a {padding:5px;}
+.easyPaginateNav a.current {font-weight:bold;text-decoration:underline;}
+.easyPaginateNav {
+    max-width: 100%;
+    overflow: auto;
+}
+
 html {
 //scroll-behavior: smooth;
 }
@@ -24,9 +51,9 @@ content: '×'; /* UTF-8 symbol */
 content: '✖'; /* UTF-8 symbol */
 }
 
-input[type=text] {
-	width: 100%;
-	max-width: 400px;
+input[type=text]{
+    max-width:400px;
+    width: 100%;
 }
 
 .menu {
