--- a/comcorhd.tronco.me/interrogar-ud/style.css
+++ b/comcorhd.tronco.me/interrogar-ud/style.css
@@ -6,12 +6,12 @@
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: orange; /* Set a background color */
+  background-color: #99a9dd; /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
+  padding: 5px 10px; /* Some padding */
+  border-radius: 20px; /* Rounded corners */
+  font-size: 16px; /* Increase font size */
 }
 
 #myBtn:hover {
@@ -51,9 +51,11 @@ content: '×'; /* UTF-8 symbol */
 content: '✖'; /* UTF-8 symbol */
 }
 
-input[type=text]{
-    max-width:400px;
+input[type=text] {
+    max-width: 400px;
     width: 100%;
+    //padding: 3px;
+    //border-radius: 4px;
 }
 
 .menu {
@@ -66,6 +68,7 @@ a {
         //color: red;
         text-decoration: none;
 }
+a:hover { color: #0069B1; }
 
 //tab
 
@@ -168,14 +171,17 @@ visibility: visible;
 }
 body {
     margin: 0;
-    background: #eaedf1;
+    //background: #eaedf1;
+    //background: white;
     font-family: 'Lato', sans-serif;
 }
 .header {
-    background: white;
+    background-color: #fafafa;
     padding: 30px;
     text-align: left;
-    background-color: #cef6ce;
+    //background-color: #cef6ce;
+    //background-color: #eaedf1;
+    //border-bottom: 2px solid black;
 }
 .header h1 {
     font-weight: 300;
@@ -210,11 +216,13 @@ h2 {
   margin: 40px auto;
 }
 .content {
-  width: 70%;
+  width: 90%;
   //max-width: 700px;
 }
+.content .container:nth-child(even) { background-color: #fafafa; }
+.content .container-lr:nth-child(even) { background-color: #fafafa; }
 .content-3d {
-  width: 50%;
+  width: 90%;
   max-width: 300px;
 }
 pre {
@@ -240,9 +248,11 @@ pre .att {color: #a6a926;} /* attribute */
 pre .val {color: #e6db74;} /* value */
 
 .btn-container, .container {
-    background-color: #cef6ce;
+    //background-color: #eaedf1;
+    //background-color: white;
     border-radius: 4px;
     text-align: left;
+    //border-top: 1px dotted black;
     padding: 15px 0px 15px 0px;
     margin-bottom: 20px;
     //margin-top: 20px;
@@ -252,11 +262,15 @@ pre .val {color: #e6db74;} /* value */
 }
 .container-lr {
     padding: 15px 15px 15px 15px;
-    background-color: #cef6ce;
+    //background-color: #cef6ce;
+    //background-color: white;
+    //border-top: 1px dotted black;
     border-radius: 4px;
     text-align: left;
     margin-bottom: 20px;
 }
+.content .container:hover { background-color: #ffffeb; }
+.content .container-lr:hover { background-color: #ffffeb; }
 .container h2 {
     padding-top: 30px;
     font-weight: 300;
