--- a/comcorhd.tronco.me/interrogar-ud/style_inquerito.css
+++ b/comcorhd.tronco.me/interrogar-ud/style_inquerito.css
@@ -1,3 +1,62 @@
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #99a9dd; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 5px 10px; /* Some padding */
+  border-radius: 20px; /* Rounded corners */
+  font-size: 16px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+table#t01 tr:nth-child(even) {
+background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+background-color: #fff;
+}
+table#t01 th {
+color: white;
+background-color: black;
+}
+
+table, th, td {
+border: 1px solid #eee;
+border-collapse: collapse;
+}
+
+.content .container:nth-child(even) {
+background-color: #fafafa;
+}
+
+.content .container-lr:nth-child(even) {
+background-color: #fafafa;
+}
+
+.content .container:hover { background-color: #f7fafe; }
+.content .container-lr:hover { background-color: #f7fafe; }
+
+td:hover {
+background-color: #ffffeb;
+}
+
+th, td {
+padding: 5px;
+}
+
+table {
+border-spacing: 5px;
+}
+
 input[type=text]{
     max-width:400px;
     width: 100%;
@@ -35,9 +94,11 @@ content: '✖'; /* UTF-8 symbol */
 }
 a {
         //color: #638C28;
-        color: blue;
+        color: #0069B1;
         text-decoration: none;
 }
+
+a:hover { color: #638C28; }
 
 //tab
 
@@ -140,7 +201,8 @@ visibility: visible;
 }
 body {
     margin: 0;
-    background: #eaedf1;
+    //background: #eaedf1;
+    background: white;
     font-family: 'Lato', sans-serif;
 }
 .header {
@@ -185,10 +247,10 @@ h2 {
   //max-width: 700px;
 }
 .content-3d {
-  width: 50%;
+  width: 90%;
   max-width: 300px;
 }
-pre {
+//pre {
     width: auto;
     max-height: 500px;
     padding: 30px 30px 30px 30px;
@@ -219,7 +281,7 @@ pre .val {color: #e6db74;} /* value */
 }
 .container-lr {
     padding: 15px 15px 15px 15px;
-    background-color: #cef6ce;
+    background-color: white;
     border-radius: 4px;
     text-align: left;
     margin-bottom: 20px;
