--- a/comcorhd.tronco.me/interrogar-ud/style_inquerito.css
+++ b/comcorhd.tronco.me/interrogar-ud/style_inquerito.css
@@ -10,6 +10,10 @@
     background-color: #ffffeb;
 }
 
+#tag {
+    height: 30px;
+}
+
 #div_filtro {
     padding: 10px;
 }
@@ -81,7 +85,6 @@ table {
 input[type=text]{
     max-width:400px;
     width: 100%;
-    height: 30px;
 }
 
 html {
