--- a/comcorhd.tronco.me/matriz/style.css
+++ b/comcorhd.tronco.me/matriz/style.css
@@ -1,3 +1,38 @@
+//br+br+br+br+br {display: none}
+
+th, td {
+padding: 4px;
+}
+
+table {
+//border-spacing: 5px;
+}
+
+table#t01 tr:hover {
+background-color: #ffffeb;
+}
+
+table#t01 tr:nth-child(even) {
+background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+background-color: #fff;
+}
+table#t01 th {
+color: white;
+background-color: black;
+}
+
+table, th, td {
+border: 1px solid #eee;
+border-collapse: collapse;
+//border-bottom: 1px solid #ddd;
+}
+
+table#t01 {
+    margin: auto;
+}
+
 .menu {
         font-size: large;
         font-weight: bold;
@@ -15,7 +50,7 @@ a {
 
 /* Style the tab */
 .tab {
-    overflow: hidden;
+    //overflow: hidden;
     //border: 1px solid #ccc;
     background-color: #f1f1f1;
 }
@@ -105,7 +140,7 @@ h2 {
   margin: 40px auto;
 }
 .content {
-  width: 90%;
+  width: 98%;
   //max-width: 700px;
 }
 .content-3d {
@@ -114,9 +149,9 @@ h2 {
 }
 pre {
     width: auto;
-    overflow: auto;
-    max-height: 500px;
-    padding: 30px 30px 30px 30px;
+    //overflow: auto;
+    //max-height: 500px;
+    //padding: 30px 30px 30px 30px;
     //background-color: #42BC6B;
     //background-color: rgba(0, 0, 0, 0.72);
     //background-color: #303030;
